# balisage

./: .gitattributes  .gitignore  license.txt  pyproject.toml  readme.md
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml  code-quality.yaml  test.yaml
html_builder/: __init__.py  attributes.py  core.py  utilities.py
html_builder/elements/: basic.py  format.py  image.py  tables.py  text.py
html_builder/structures/: enums.py
samples/centered_image/: index.html  main.py  style.css
samples/dataframe_table/: index.html  main.py  style.css
samples/page_with_table/: index.html  main.py  style.css
src/balisage/: __init__.py  attributes.py  core.py  types.py  utilities.py
src/balisage/elements/: format.py  lists.py  styles.py  tables.py
src/balisage/utilities/: validate.py
src/html_builder/: attributes.py  core.py  utilities.py
src/html_builder/elements/: basic.py  format.py  image.py  tables.py  text.py
test/: attributes_test.py  core_test.py
test/elements/: format_test.py  image_test.py
tests/: attributes_test.py  core_test.py  test_utilities.py
tests/_data/: prettify_indent_0.html  prettify_indent_2.html  prettify_indent_4.html  prettify_save.html
tests/elements/: basic_test.py  format_test.py  image_test.py  links_test.py  lists_test.py  styles_test.py  tables_test.py  text_test.py
tests/utilities/: optional_test.py  test_validate.py  validate_test.py
